Add decimal series positions
