# openapi.yaml
@@ -558,6 +558,12 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ProblemDetail"
+        "415":
+          description: Content type is not application/json
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ProblemDetail"
       security: []
   /api/v1/auth/logout:
     post:
@@ -576,6 +582,12 @@ paths:
           description: Service Unavailable
         "204":
           description: Refresh cookie cleared
+        "415":
+          description: Content type is not application/json
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ProblemDetail"
       security: []
   /api/v1/auth/login:
     post:
@@ -1649,8 +1661,8 @@ components:
         seriesName:
           type: string
         seriesPosition:
-          type: integer
-          format: int32
+          type: number
+          format: double
         series:
           type: array
           items:
@@ -1695,8 +1707,8 @@ components:
         name:
           type: string
         position:
-          type: integer
-          format: int32
+          type: number
+          format: double
     CommentPage:
       type: object
       properties:
@@ -1820,8 +1832,8 @@ components:
         seriesName:
           type: string
         seriesPosition:
-          type: integer
-          format: int32
+          type: number
+          format: double
         series:
           type: array
           items:
@@ -1855,8 +1867,8 @@ components:
         name:
           type: string
         position:
-          type: integer
-          format: int32
+          type: number
+          format: double
         books:
           type: array
           items:
@@ -1875,8 +1887,8 @@ components:
         coverUrl:
           type: string
         position:
-          type: integer
-          format: int32
+          type: number
+          format: double
     CommunityRatingResponse:
       type: object
       properties:
